--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-helmet": "^6.1.0",
@@ -19,7 +20,7 @@
     "react-image-zoom": "^1.3.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
